# mulch

./: .gitignore  meson.build  mulch.db  mulch_draft_4.db  test1.sql
assets/: instert_toy_values.sql  meson.build  template.sql
src/: AtomicModelInfo.cpp  AtomicModelInfo.h  BondBasedModelInfo.cpp  BondBasedModelInfo.h  Cache.h  CoarseGrainingModelInfo.cpp  CoarseGrainingModelInfo.h  Coding_notes.txt  Collection.cpp  Collection.h  CollectionHasDataset.cpp  CollectionHasDataset.h  CryoEMDataInfo.cpp  CryoEMDataInfo.h  CryoEMInfo.cpp  CryoEMInfo.h  CryoEMQualityData.cpp  CryoEMQualityData.h  Crystal.cpp  Crystal.h  CrystalQualityData.cpp  CrystalQualityData.h  CrystallographicDataInfo.cpp  CrystallographicDataInfo.h  CrystallographicInfo.cpp  CrystallographicInfo.h  Data.cpp  Data.h  DataCryoEMInfo.cpp  DataCryoEMInfo.h  DataCrystallographicInfo.cpp  DataCrystallographicInfo.h  DataInfo.cpp  DataNMRInfo.cpp  DataNMRInfo.h  Database.cpp  Database.h  DebugLog.cpp  DebugLog.h  EnsembleRefineInfo.cpp  (+45 more)
tests/: meson.build  mulch_tests_basic.cpp  mulch_tests_insert.cpp  mulch_tests_retrieve.cpp  test_Database.cpp
